per page orders 100

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 APP_NAME=WooCommerce Rest API Server
+auth=Basic dGVzdEBnbWFpbC5jb20gdGVzdDEyMzp0ZXN0MTIzNDV0c3QxMjM=
 email="test@gmail.com"
 password="test123"
